src/objects/CityInfoMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>matchKey__c</fullName>
        <label>matchKey</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>postcode__c</fullName>
        <label>postcode</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>province__c</fullName>
        <label>province</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CityInfoMapping</label>
</CustomObject>